--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 
                 <div class=" col-md-2 col-12 text-md-start text-center">
                     <h2>15 March</h2>
-                    <p>Next Batch Starts</p>
+                    <p>Next Batch Start</p>
                 </div>
             </div>
         </div>
